# SunSound

./: .prueba.rs.swp  aboutUs.html  courses.html  gallery.html  index.html  package-lock.json  style.css
Dapp_de_Prueba/: .prueba.rs.swp
Dapp_de_Prueba/crypto_prices/src/: main.rs
SunSoun_Webtask_BackEnd_Service/SunSoun_Webtask_Service/: Cargo.toml
backend/Dapp_de_Prueba/crypto_prices/: Cargo.toml
backend/SunSoun_Webtask_BackEnd_Service/SunSoun_Webtask_Service/src/: main.rs
backend/SunSound_Auth/backend/: Cargo.toml
backend/SunSound_Auth/backend/src/api/: token.rs
backend/SunSound_Auth/frontend/: Cargo.toml
backend/SunSound_Auth/frontend/src/: lib.rs
backend/my-redis/: Cargo.toml
backend/my-redis/examples/: hello-sun_sound.rs
backend/my-redis/src/: main.rs
backend/sunsound_a/src/: main.rs
backend/sunsound_ai/: Cargo.toml
js/: conectToJson.js  curses.js  main.js  rendered.js  script.js
json/: cards.json  curses.json
src/: App.js  index.js
src/components/ButtonPrincipal/: ButtonPrincipal.css
src/components/CardStar/: CardStar.css  CardStar.jsx
src/components/Footer/: Footer.css  Footer.jsx
src/components/GlobalComponents/ButtonClickA/: ButtonA.jsx
src/components/GlobalComponents/ButtonPrincipal/: ButtonPrincipal.jsx
src/components/GlobalComponents/CardStar/: CardStar.css
src/components/LandingPage/: LandingPage.jsx
src/components/NavBar/: NavBar.jsx
src/components/SliderCursos/: SliderCursos.css
src/components/TextBoxLandingContent/: TextBoxLandingContent.jsx
src/components/TrianguloContent/: TrianguloContent.css  TrianguloContent.jsx
src/pages/: LandingSunSound.css  LandingSunSound.js
