[package]
name = "SunSoun_Webtask_Service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^1.7.0", features = ["v4"]}
serde = { version = "^1", features = ["derive"]}
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_13"] }
aws-config = "1.1.6"
aws-sdk-dynamodb = "1.15.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.2"
log = "^0.4"
strum_macros = "^0.26.1"
strum = { version = "^0.26.1", features = ["derive"]}
derive_more = "^0.99.17"
