[package]
name = "SunSound_AI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^1.2.0", features = ["full"] }
hyper-tls = "^0.6"
tokio = { version = "1", features = ["full"]}
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
spinners = "^4.1.1"