[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend = { path = "../frontend" }
actix-web = { version = "^4", features = ["openssl"] } 
openssl = "0.10"
actix-files = "0.6"
actix-web-lab = "0.20.2"
aws-config = "^1.1.6"
aws-sdk-dynamodb = "^1.15"
env_logger = "0.11.2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
strum_macros = "^0.26.1"
strum = { version = "^0.26.1", features = ["derive"] }
log = "^0.4"
common = { path = "../common" }
chrono = "^0"
uuid = { version = "^0.8", features = ["v4", "wasm-bindgen"] }
derive_more = "^0"
oauth2 = "4.2"
jsonwebtokens-cognito = "0.1.1"
